--- a/public/css/style.css
+++ b/public/css/style.css
@@ -563,7 +563,7 @@ body {
 
 @media (max-width: 950px) {
   .section-name {
-    font-size: 16px;
+    font-size: 15px;
     line-height: 20px;
   }
   .section-title {
@@ -3454,5 +3454,95 @@ body::after {
 @media (max-width: 500px) {
   .popup__form-block {
     flex-direction: column;
+  }
+}
+#map {
+  width: 100%;
+  height: 660px;
+}
+
+.contacts {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+.contacts__content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+}
+.contacts .popup__content {
+  scale: 1;
+  visibility: visible;
+}
+.contacts .popup__text {
+  text-align: start;
+}
+.contacts .popup__title-h2 {
+  margin-bottom: 40px;
+}
+.contacts .popup__form-box {
+  width: 100%;
+}
+.contacts .popup__form {
+  width: 100%;
+  max-width: 780px;
+}
+.contacts__phon-mail {
+  display: flex;
+  gap: 40px;
+}
+.contacts .popup__form-box {
+  max-width: 100%;
+}
+.contacts .popup__form-box input {
+  max-width: 100%;
+}
+.contacts .popup__form-box textarea {
+  max-width: 100%;
+  height: 65px;
+}
+.contacts .contacts__content {
+  align-items: flex-start;
+  justify-content: space-between;
+}
+.contacts .popup__text {
+  margin: 0px;
+}
+.contacts .popup__button-wrapper {
+  justify-content: flex-start;
+}
+.contacts .phone-error {
+  margin-left: 10px;
+  color: red;
+}
+.contacts .contacts__phon-mail div {
+  width: 100%;
+  max-width: 100%;
+}
+
+@media (max-width: 666px) {
+  .contacts {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+  .contacts__content {
+    flex-direction: column;
+  }
+  .contacts .popup__button {
+    width: 100%;
+  }
+  .contacts__phon-mail {
+    flex-direction: column;
+    gap: 18px;
+  }
+  .contacts .phone-error {
+    margin-left: 5px;
+  }
+  .contacts .popup__title-h3 {
+    margin-bottom: 18px;
+  }
+  .contacts .popup__title-h2 {
+    margin-bottom: 20px;
   }
 }
