--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1816,6 +1816,25 @@ body {
     margin-bottom: 20px;
   }
 }
+.phone-error,
+.name-error {
+  margin-left: 10px;
+  color: red;
+}
+
+:lang(es) .about__title {
+  max-width: 302px;
+}
+
+:lang(es) .about__title-author {
+  flex: 0 0 302px;
+}
+
+@media (max-width: 950px) {
+  :lang(es) .about__title-h3::before {
+    width: 225px;
+  }
+}
 .footer {
   background: #F0EDEA;
   padding-bottom: 120px;
@@ -2302,7 +2321,7 @@ body {
 .services-price__wrapper {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: stretch;
   gap: 40px;
   margin-bottom: 40px;
 }
@@ -2320,9 +2339,10 @@ body {
 .services-price__list {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: stretch;
   flex-direction: column;
   max-width: 500px;
+  width: 100%;
 }
 .services-price__title {
   font-weight: 700;
@@ -2330,8 +2350,8 @@ body {
   line-height: 29px;
   position: relative;
   display: inline-block;
-  margin-bottom: 25px;
   z-index: 1;
+  margin: 0 auto 8px auto;
 }
 .services-price__title::before {
   content: "";
@@ -2343,6 +2363,14 @@ body {
   left: 0;
   bottom: 0;
   z-index: -1;
+}
+.services-price__description {
+  font-family: "CormorantGaramond", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 22px;
+  color: #131313;
+  margin: 0 auto 25px auto;
 }
 .services-price__item {
   border-bottom: solid 1px rgba(19, 19, 19, 0.1);
@@ -2569,6 +2597,12 @@ body {
   color: #fff;
   top: 0;
   z-index: -1;
+}
+
+.spollers__body {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
 }
 
 .services-spollers-mobile {
@@ -2934,11 +2968,13 @@ body {
     font-size: 24px;
     line-height: 29px;
     margin-bottom: 24px;
+    text-align: center;
   }
   .teaching-about__title-mobile {
     display: block;
-    width: 272px;
+    width: 296px;
     text-align: center;
+    margin: 0 auto;
   }
   .teaching-about__title {
     display: none;
@@ -3477,6 +3513,9 @@ body::after {
 }
 .contacts .popup__text {
   text-align: start;
+}
+.contacts .popup__title-h3 {
+  white-space: nowrap;
 }
 .contacts .popup__title-h2 {
   margin-bottom: 40px;
