--- a/resources/scss/contacts.scss
+++ b/resources/scss/contacts.scss
@@ -2,6 +2,7 @@
   width: 100%;
   height: 660px;
 }
+
 .contacts {
   padding-top: 120px;
   padding-bottom: 120px;
@@ -20,6 +21,10 @@
 
   .popup__text {
     text-align: start;
+  }
+
+  .popup__title-h3 {
+    white-space: nowrap;
   }
 
   .popup__title-h2 {
@@ -102,6 +107,7 @@
     .popup__title-h3 {
       margin-bottom: 18px;
     }
+
     .popup__title-h2 {
       margin-bottom: 20px;
     }
