--- a/resources/scss/services.scss
+++ b/resources/scss/services.scss
@@ -204,7 +204,7 @@
   &__wrapper {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: stretch;
     gap: 40px;
     margin-bottom: 40px;
   }
@@ -224,9 +224,10 @@
   &__list {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: stretch;
     flex-direction: column;
     max-width: 500px;
+    width: 100%;
   }
 
   &__title {
@@ -235,8 +236,8 @@
     line-height: 29px;
     position: relative;
     display: inline-block;
-    margin-bottom: 25px;
     z-index: 1;
+    margin: 0 auto 8px auto;
 
     &::before {
       content: "";
@@ -249,6 +250,15 @@
       bottom: 0;
       z-index: -1;
     }
+  }
+
+  &__description {
+    font-family: 'CormorantGaramond', sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 22px;
+    color: #131313;
+    margin: 0 auto 25px auto;
   }
 
   &__item {
@@ -523,9 +533,7 @@
   padding-bottom: 160px;
 }
 
-.services-saloon {
-
-}
+.services-saloon {}
 
 .services-spollers {
   position: relative;
@@ -539,6 +547,12 @@
     top: 0;
     z-index: -1;
   }
+}
+
+.spollers__body {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
 }
 
 .services-spollers-mobile {
