--- a/resources/scss/teaching.scss
+++ b/resources/scss/teaching.scss
@@ -389,12 +389,14 @@
       font-size: 24px;
       line-height: 29px;
       margin-bottom: 24px;
+      text-align: center;
     }
 
     &__title-mobile {
       display: block;
-      width: 272px;
+      width: 296px;
       text-align: center;
+      margin: 0 auto;
     }
 
     &__title {
