--- a/resources/scss/home.scss
+++ b/resources/scss/home.scss
@@ -619,16 +619,30 @@ body {
   }
 
   &__teaching-wrapper {
-    display: flex;
+/*     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 16px; */
+    display: grid;
+    grid-template-columns: repeat(3, minmax(300px, 402px));
+    grid-template-rows: auto;
     gap: 16px;
+    //min-height: 562px;
+    @media (max-width: $tablet) {
+      grid-template-columns: minmax(290px, 402px);
+      grid-template-rows: repeat(3, auto);
+      justify-content: center;
+    }
   }
 
   &__teaching-item {
-    flex: 0 1 33%;
-    min-height: 562px;
+    //flex: 0 1 33%;
+    display: grid;
+    grid-auto-flow: row;
+    grid-template: 270px 1fr / 1fr;
     background: #FFFFFF;
+    gap: 24px;
+    padding-bottom: 40px;
   }
 
   &__teaching-img-wrapper {
@@ -663,14 +677,17 @@ body {
   }
 
   &__teaching-content {
-    margin: 24px;
+    display: grid;
+    grid-template: auto 1fr auto / 1fr;
   }
 
   &__teaching-title {
     font-family: $font__CormorantGaramond;
     font-weight: 700;
     font-size: 24px;
-    line-height: 30px;
+    //line-height: 30px;
+    //margin-bottom: 16px;
+    padding: 0 24px;
     margin-bottom: 16px;
   }
 
@@ -680,9 +697,11 @@ body {
     line-height: 24px;
     color: #828282;
     margin-bottom: 24px;
+    padding: 0 24px;
   }
 
   &__teaching-popup {
+    justify-self: start;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -692,11 +711,12 @@ body {
     background: $color__yellow;
     padding: 17px 44px;
     border-radius: 50px;
+    margin: 0 24px;
   }
 }
 
 // services teaching =========================================================================================
-@media(max-width: 950px) {
+/* @media(max-width: 950px) {
   .services {
     &__teaching {}
 
@@ -723,7 +743,7 @@ body {
       margin: 24px;
     }
   }
-}
+} */
 
 // advantages ================================================================================================
 .advantages {
