--- a/public/css/style.css
+++ b/public/css/style.css
@@ -351,20 +351,35 @@ body.lock {
   position: relative;
   cursor: pointer;
 }
-.header__menu-item.active .header__sub-menu-list {
+.header__menu-item::before {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 166px;
+  height: 15px;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+.header__menu-item:hover .header__sub-menu-list {
   top: calc(100% + 10px);
   opacity: 1;
   visibility: visible;
   pointer-events: all;
-  left: 50%;
+  left: 0%;
+}
+.header__menu-item:hover::before {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: all;
 }
 .header__sub-menu-list {
   position: absolute;
   top: calc(100% + 10px);
-  left: -50%;
+  left: -100%;
   padding: 10px 15px;
   background-color: #FFD700;
-  transform: translateX(-50%);
   opacity: 0;
   visibility: 0;
   pointer-events: none;
@@ -1501,6 +1516,7 @@ body {
   background: linear-gradient(0deg, rgba(240, 237, 234, 0.8), rgba(240, 237, 234, 0.8));
   opacity: 0;
   transition: opacity 0.6s;
+  display: none;
 }
 .saloon__content-wrapper:hover {
   opacity: 1;
