--- a/resources/scss/home.scss
+++ b/resources/scss/home.scss
@@ -1028,6 +1028,7 @@ body {
     background: linear-gradient(0deg, rgba(240, 237, 234, 0.8), rgba(240, 237, 234, 0.8));
     opacity: 0;
     transition: opacity .6s;
+    display: none;
 
     &:hover {
       opacity: 1;
