--- a/resources/scss/header.scss
+++ b/resources/scss/header.scss
@@ -114,9 +114,10 @@
     background-color: $color__yellow;
     //transform: translateX(-50%);
     opacity: 0;
-    visibility: 0;
+    visibility: hidden;
     pointer-events: none;
     transition: all 0.3s ease 0s;
+    min-width: 143px
   }
 
   &__sub-menu-item{
