--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1177,14 +1177,15 @@ body {
       align-items: center;
       gap: 16px; */
   display: grid;
-  grid-template-columns: repeat(3, minmax(300px, 402px));
+  grid-template-columns: repeat(2, minmax(300px, 402px));
   grid-template-rows: auto;
   gap: 16px;
+  justify-content: center;
 }
 @media (max-width: 61.99875em) {
   .services__teaching-wrapper {
     grid-template-columns: minmax(290px, 402px);
-    grid-template-rows: repeat(3, auto);
+    grid-template-rows: repeat(2, auto);
     justify-content: center;
   }
 }
@@ -1446,6 +1447,20 @@ body {
 }
 .saloon {
   margin-bottom: 120px;
+  /*   &__link:nth-child(4) {
+      grid-column: 16/31;
+      grid-row: 2;
+      margin-left: 20px;
+      margin-right: 20px;
+      margin-top: 30px;
+    }
+
+    &__link:nth-child(5) {
+      grid-column: 31/46;
+      grid-row: 2;
+      margin-left: 40px;
+      margin-top: 30px;
+    } */
 }
 .saloon__title {
   text-align: center;
@@ -1458,43 +1473,44 @@ body {
 }
 .saloon__wrapper {
   display: grid;
-  grid-template-rows: 350px 350px;
+  grid-template-rows: auto;
   grid-template-columns: repeat(45, 1fr);
   justify-items: stretch;
   align-items: stretch;
 }
-.saloon__link:nth-child(1) {
-  grid-column: 1/26;
-  grid-row: 1;
-  margin-bottom: 30px;
+.saloon__link {
+  position: relative;
+  padding-bottom: 84.7%;
 }
-.saloon__link:nth-child(2) {
-  grid-column: 26/46;
-  grid-row: 1;
-  margin-left: 60px;
-  margin-bottom: 30px;
-}
-.saloon__link:nth-child(3) {
+.saloon__link:nth-child(3n+3) {
   grid-column: 1/16;
-  grid-row: 2;
   margin-right: 40px;
   margin-top: 30px;
+  /*     img{
+        @include adaptiveValueREM('width', 387, 126, 1920, 320, 1);
+      } */
 }
-.saloon__link:nth-child(4) {
+.saloon__link:nth-child(3n+4) {
   grid-column: 16/31;
-  grid-row: 2;
   margin-left: 20px;
   margin-right: 20px;
   margin-top: 30px;
 }
-.saloon__link:nth-child(5) {
+.saloon__link:nth-child(3n+5) {
   grid-column: 31/46;
-  grid-row: 2;
   margin-left: 40px;
   margin-top: 30px;
 }
-.saloon__link {
-  position: relative;
+.saloon__link:nth-child(1) {
+  grid-column: 1/26;
+  margin-bottom: 30px;
+  padding-bottom: 50.8%;
+}
+.saloon__link:nth-child(2) {
+  grid-column: 26/46;
+  margin-left: 60px;
+  margin-bottom: 30px;
+  padding-bottom: 50.8%;
 }
 .saloon__img source, .saloon__img img {
   position: absolute;
@@ -1557,6 +1573,13 @@ body {
 }
 
 @media (max-width: 950px) {
+  .saloon {
+    /*     &__link:nth-child(3n+2) {
+          grid-column: 3/5;
+          //grid-row: 3;
+          margin: 0;
+        } */
+  }
   .saloon__title-h3 {
     margin-bottom: 17px;
   }
@@ -1565,7 +1588,7 @@ body {
   }
   .saloon__wrapper {
     display: grid;
-    grid-template-rows: 136px 115px 115px;
+    grid-template-rows: auto;
     grid-template-columns: repeat(4, 1fr);
     justify-items: stretch;
     align-items: stretch;
@@ -1573,29 +1596,20 @@ body {
     max-width: 600px;
     margin: 0 auto;
   }
+  .saloon__link:nth-child(2n+1) {
+    grid-column: 3/5;
+    margin: 0;
+  }
+  .saloon__link:nth-child(2n) {
+    grid-column: 1/3;
+    margin: 0;
+  }
   .saloon__link:nth-child(1) {
     grid-column: 1/5;
-    grid-row: 1;
     margin: 0;
   }
   .saloon__link:nth-child(2) {
     grid-column: 1/3;
-    grid-row: 2;
-    margin: 0;
-  }
-  .saloon__link:nth-child(3) {
-    grid-column: 3/5;
-    grid-row: 2;
-    margin: 0;
-  }
-  .saloon__link:nth-child(4) {
-    grid-column: 1/3;
-    grid-row: 3;
-    margin: 0;
-  }
-  .saloon__link:nth-child(5) {
-    grid-column: 3/5;
-    grid-row: 3;
     margin: 0;
   }
   .saloon__content-wrapper {
