--- a/resources/scss/home.scss
+++ b/resources/scss/home.scss
@@ -624,13 +624,14 @@ body {
     align-items: center;
     gap: 16px; */
     display: grid;
-    grid-template-columns: repeat(3, minmax(300px, 402px));
+    grid-template-columns: repeat(2, minmax(300px, 402px));
     grid-template-rows: auto;
     gap: 16px;
+    justify-content: center;
     //min-height: 562px;
     @media (max-width: $tablet) {
       grid-template-columns: minmax(290px, 402px);
-      grid-template-rows: repeat(3, auto);
+      grid-template-rows: repeat(2, auto);
       justify-content: center;
     }
   }
@@ -961,33 +962,61 @@ body {
 
   &__wrapper {
     display: grid;
-    grid-template-rows: 350px 350px;
+    grid-template-rows: auto;
     grid-template-columns: repeat(45, 1fr);
     justify-items: stretch;
     align-items: stretch;
   }
 
+  &__link {
+    position: relative;
+    padding-bottom: 84.7%;
+  }
+
+
+  &__link:nth-child(3n+3) {
+    grid-column: 1/16;
+    //grid-row: 2;
+    margin-right: 40px;
+    margin-top: 30px;
+/*     img{
+      @include adaptiveValueREM('width', 387, 126, 1920, 320, 1);
+    } */
+  }
+
+  &__link:nth-child(3n+4) {
+    grid-column: 16/31;
+    //grid-row: 2;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 30px;
+
+  }
+
+  &__link:nth-child(3n+5) {
+    grid-column: 31/46;
+    //grid-row: 2;
+    margin-left: 40px;
+    margin-top: 30px;
+
+  }
+
   &__link:nth-child(1) {
     grid-column: 1/26;
-    grid-row: 1;
+    //grid-row: 1;
     margin-bottom: 30px;
+    padding-bottom: 50.8%;
   }
 
   &__link:nth-child(2) {
     grid-column: 26/46;
-    grid-row: 1;
+    //grid-row: 1;
     margin-left: 60px;
     margin-bottom: 30px;
+    padding-bottom: 50.8%;
   }
 
-  &__link:nth-child(3) {
-    grid-column: 1/16;
-    grid-row: 2;
-    margin-right: 40px;
-    margin-top: 30px;
-  }
-
-  &__link:nth-child(4) {
+/*   &__link:nth-child(4) {
     grid-column: 16/31;
     grid-row: 2;
     margin-left: 20px;
@@ -1000,11 +1029,9 @@ body {
     grid-row: 2;
     margin-left: 40px;
     margin-top: 30px;
-  }
+  } */
 
-  &__link {
-    position: relative;
-  }
+ 
 
   &__img source,
   &__img img {
@@ -1092,7 +1119,7 @@ body {
 
     &__wrapper {
       display: grid;
-      grid-template-rows: 136px 115px 115px;
+      grid-template-rows: auto;
       grid-template-columns: repeat(4, 1fr);
       justify-items: stretch;
       align-items: stretch;
@@ -1101,33 +1128,34 @@ body {
       margin: 0 auto;
     }
 
+
+    &__link:nth-child(2n+1) {
+      grid-column: 3/5;
+      //grid-row: 2;
+      margin: 0;
+    }
+
+    &__link:nth-child(2n) {
+      grid-column: 1/3;
+      //grid-row: 3;
+      margin: 0;
+    }
+
+/*     &__link:nth-child(3n+2) {
+      grid-column: 3/5;
+      //grid-row: 3;
+      margin: 0;
+    } */
+
     &__link:nth-child(1) {
       grid-column: 1/5;
-      grid-row: 1;
+      //grid-row: 1;
       margin: 0;
     }
 
     &__link:nth-child(2) {
       grid-column: 1/3;
-      grid-row: 2;
-      margin: 0;
-    }
-
-    &__link:nth-child(3) {
-      grid-column: 3/5;
-      grid-row: 2;
-      margin: 0;
-    }
-
-    &__link:nth-child(4) {
-      grid-column: 1/3;
-      grid-row: 3;
-      margin: 0;
-    }
-
-    &__link:nth-child(5) {
-      grid-column: 3/5;
-      grid-row: 3;
+      //grid-row: 2;
       margin: 0;
     }
 
