Setting up slider

--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -144,7 +144,8 @@ body {
   }
 }
 
-
+@import "swiper/swiper";
+@import "swiper/navigation";
 @import "header";
 @import "home";
 @import "footer";
