Revert last commit

--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -144,8 +144,8 @@ body {
   }
 }
 
-//@import "swiper/swiper";
-//@import "swiper/navigation";
+@import "swiper/swiper";
+@import "swiper/navigation";
 @import "header";
 @import "home";
 @import "footer";
