--- a/resources/scss/home.scss
+++ b/resources/scss/home.scss
@@ -1218,7 +1218,7 @@ body {
   height: 431px;
   margin: 0 42px 0 42px;
   position: relative;
-
+  touch-action: pan-y;
   &::before {
     content: '';
     position: absolute;
@@ -1260,6 +1260,16 @@ body {
     height: 100%;
     -o-object-fit: cover;
     object-fit: cover;
+  }
+  .swiper-lazy-preloader{
+    height: 100px;
+    width: 100px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 5;
+    background-image: url('../../public/img/load_100.gif');
   }
 }
 
