--- a/resources/scss/teaching.scss
+++ b/resources/scss/teaching.scss
@@ -598,10 +598,11 @@
     border: 1px solid rgba(19, 19, 19, 0.1);
     border-radius: 5px;
     display: flex;
-    justify-content: center;
+    //justify-content: center;
     align-items: center;
     gap: 24px;
     padding: 15px;
+    min-height: 122px;
   }
 
   &__icon {
