--- a/resources/scss/teaching.scss
+++ b/resources/scss/teaching.scss
@@ -17,6 +17,7 @@
 
   &__title-h3 {
     margin-bottom: 24px;
+    text-transform: uppercase;
   }
 
   &__title-h2 {
@@ -631,8 +632,18 @@
   }
 }
 
+//ПРАВКИ!
 .number{
   //font-size: 72px;
   font-family: Mulish;
   //font-weight: normal;
+}
+.course-title{
+  display: inline-block;
+  font-weight: 400;
+    font-size: 24px;
+    line-height: 36px;
+    color: #4F4F4F;
+    text-transform: none;
+    font-family: "Mulish"
 }
