--- a/resources/scss/popup.scss
+++ b/resources/scss/popup.scss
@@ -85,6 +85,7 @@ body::after {
     height: 20px;
     margin-left: auto;
     cursor: pointer;
+    z-index: 5;
 
     &:before,
     &:after {
@@ -193,7 +194,7 @@ body::after {
     justify-content: center;
   }
 
-  &__button {
+  &__button, &__success-button {
     font-weight: 600;
     font-size: 16px;
     line-height: 20px;
@@ -203,6 +204,49 @@ body::after {
     background: linear-gradient(0deg, #FFD700, #FFD700), #ED7C30;
     border-radius: 50px;
   }
+
+  .success{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    h4{
+      text-align: center;
+      margin-bottom: 50px;
+    }
+  }
+
+  &.send{
+    .popup__text{
+      opacity: 0;
+      visibility: hidden;
+      pointer-events: none;
+    }
+    .popup__form-block{
+      opacity: 0;
+      visibility: hidden;
+      pointer-events: none;
+    }
+    .popup__button-wrapper{
+      opacity: 0;
+      visibility: hidden;
+      pointer-events: none;
+    }
+    .success{
+    opacity: 1;
+    visibility: visible;
+    pointer-events: all;
+    }
+  }
+
 }
 
 .select2-selection {
